<resources>
    <string name="app_name">HW1_Groups24</string>
    <string name="billTotal">Bill Total</string>
    <string name="enterBillValue">Enter Bill Value</string>
    <string name="tipPercent">Tip %</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="custom">Custom</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="tipValue">0.0</string>
    <string name="twentyFivePercent">25%</string>
    <string name="exit">Exit</string>
    
</resources>
